# hklpy

./: .coveragerc  .flake8  .gitattributes  .gitignore  .landscape.yml  .pre-commit-config.yaml  .travis.yml  LICENSE  MANIFEST.in  Makefile  README.md  RELEASE_NOTES.rst  circle.yml  env-dev.yml  environment.yml  github_deploy_key_bluesky_bluesky_github_io.enc  livedata_issue62.txt  pyproject.toml  pytest.ini  requirements-doc.txt  requirements-test.txt  requirements.txt  setup.cfg  setup.py  versioneer.py
.github/: conda_unit_test.yml  edit_test_environment.py  flake8.yml  tmate.yml  tmate_session.yml
.github/workflows/: conda_unit_test.yml  pre-commit.yml  publish-docs.yml  testing.yml  upload_pypi.yml
.logs/: ipython_console.log.001~
conda-recipe/: meta.yaml
doc/source/: calc.rst  conf.py  context.rst  diffract.rst  engine.rst  index.rst  sample.rst  util.rst
doc/source/examples/: compare.rst  index.rst
docs/: Makefile  make_geometry_tables.py
docs/source/: api.rst  calc.rst  conf.py  configuration.rst  constraints.rst  context.rst  diffract.rst  engine.rst  geometries.rst  geometry_tables.rst  index.rst  install.rst  license.rst  overview.rst  ready_to_use.rst  release_notes.rst  sample.rst  substitutions.txt  user.rst  user_guide.rst  util.rst
docs/source/_static/: e4c-config.json  e4c-config.yml  issue-155.ipynb
docs/source/examples/: compare.rst  diffractometer.rst  e4cv.rst  e6c_test_calculations.rst  howto.rst  index.rst  (+2 more)
examples/: Makefile  README.md  UB_save_restore.ipynb  compare.ipynb  e4cv.ipynb  e4cv_renamed_axes.ipynb  e6c.ipynb  e6c_test_calculations.ipynb  fourc_e4cv.ipynb  geo_e4cv.ipynb  geo_e6c.ipynb  geo_k4cv.ipynb  hkl-example.ipynb  hkl-verify-e6c.ipynb  hkl_test.py  hkl_test.py.out_of_date  how_additional_parameters.ipynb  how_extra_real_axis.ipynb  k4cv.ipynb  sixc_e6c.ipynb  tardis_example.ipynb  tst_UB_in_descriptor_document.ipynb  tst_UB_in_stream.ipynb  tst_UB_save_restore.ipynb  tst_e4cv_fourc.ipynb  tst_e6c_test_calculations.ipynb  var_e4cv_renamed_axes.ipynb  var_engines.ipynb  var_nslsii_tardis.ipynb  var_parameters.ipynb
examples/archive/: config.py  e4cv_fourc.ipynb  hkl-example.ipynb.ignore  spec_report.py  tardis_example.ipynb
hkl/: __init__.py  _version.py  c2.py  calc.py  configuration.py  context.py  diffract.py  engine.py  geometries.py  reflect.py  sample.py  user.py  util.py
hkl/tests/: __init__.py  class_fourc.py  common.py  conftest.py  test_configuration.py  test_diffract.py  test_e6c.py  test_e6c_calculations.py  test_extra_motor.py  test_fourc.py  test_i307.py  test_i325_motor_config_attrs.py  test_i350_value-error.py  test_init.py  test_reflect.py  test_restore_reflections.py  test_sample.py  test_save_restore_UB.py  test_tardis.py  test_user.py  test_util.py  tools.py
tests/: test_tardis.py
(+27 files in other folders)
