[build-system]
requires = [
  "setuptools_scm[toml]>=6.2",
  "setuptools>=61.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "hklpy"
description = "Controls for using diffractometers within the Bluesky Framework."
authors = [
  { name="Ken Lauer" },
  { name="Max Rakitin" },
  { name="Pete Jemian", email="prjemian+hklpy@gmail.com" },
]
maintainers = [
  { name="Pete Jemian", email="prjemian+hklpy@gmail.com" },
]
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.8"
keywords = ["bluesky", "diffraction", "diffractometer"]
# https://packaging.python.org/en/latest/specifications/declaring-project-metadata/?highlight=license
license = {file = "LICENSE"}
# https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: Freely Distributable",
    "License :: Public Domain",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Scientific/Engineering",
]

# qt ==5
# pyqt ==5
dependencies = [
  "apischema",
  "databroker",
  "numpy",
  "ophyd",
  "pint",
  "pygobject",
  "pyRestTable",
  "tqdm",
]

[project.optional-dependencies]
docs = [
  "pydata-sphinx-theme",
  "spec2nexus",
]
tests = [
  "bluesky",
  "tiled",
  "packaging",
]
all = ["hklpy[docs,tests]"]

[project.urls]
"Homepage" = "https://blueskyproject.io/hklpy/"
"Bug Tracker" = "https://github.com/bluesky/hklpy/issues"

[tool.black]
line-length = 115  # matches the value of 'max-line-length' in .flake8
target-version = ['py38']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | examples/archive
    | build
    | dist
  )/
  | hkl/_version.py
)
'''

[tool.flake8]
max-line-length = 88
extend-ignore = ["E501"]

[tool.isort]
profile = "black"
force_single_line  = "True"
line_length = 88
multi_line_output = "NOQA"
src_paths = ["hkl"]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
[tool.setuptools_scm]
